--- a/css/main.css
+++ b/css/main.css
@@ -4,12 +4,12 @@
 
 /*components*/
 @import url(components/buttons.css);
+@import url(components/navigation.css);
 
 /*layout*/
 @import url(layout/grid.css);
 @import url(layout/header.css);
-@import url(layout/navigation.css);
-
 
 /*pages*/
 @import url(pages/home.css);
+@import url(pages/about.css);
