--- a/css/layout/grid.css
+++ b/css/layout/grid.css
@@ -10,3 +10,18 @@
 .col{
   float: left;
 }
+
+/*************************
+*      colomn width      *
+**************************/
+.col-1{
+  width: calc(100%/12);
+}
+
+.col-6{
+  width: 50%;
+}
+
+.col-12{
+  width: 100%;
+}
